--- a/PrintHook.csproj
+++ b/PrintHook.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\PrintController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Service.cs">
       <SubType>Component</SubType>
